--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "passport": "^0.4.1"
     },
     "devDependencies": {
-        "@sap/ux-specification": "^1.108.5",
+        "@sap/ux-specification": "^1.108.6",
         "rimraf": "^3.0.2",
         "sqlite3": "^5.1.6"
     },
@@ -35,7 +35,10 @@
         "hana": "cds deploy --to hana:bookshop-db --auto-undeploy",
         "watch-authors-app": "cds watch --open authors-app/webapp/index.html?sap-ui-xx-viewCache=false",
         "watch-custom": "cds watch --open custom/index.html?sap-ui-xx-viewCache=false",
-        "watch-flexiblelayout": "cds watch --open flexiblelayout/webapp/index.html?sap-ui-xx-viewCache=false"
+        "watch-flexiblelayout": "cds watch --open flexiblelayout/webapp/index.html?sap-ui-xx-viewCache=false",
+        "watch-testingcustom": "cds watch --open testingcustom/webapp/index.html?sap-ui-xx-viewCache=false",
+        "watch-testingproject": "cds watch --open testingproject/webapp/index.html?sap-ui-xx-viewCache=false",
+        "watch-newcustomapplication": "cds watch --open newcustomapplication/webapp/index.html?sap-ui-xx-viewCache=false"
     },
     "cds": {
         "requires": {
@@ -58,6 +61,9 @@
         "app/bookshop-fe",
         "app/authors-app",
         "app/custom",
-        "app/flexiblelayout"
+        "app/flexiblelayout",
+        "app/testingcustom",
+        "app/testingproject",
+        "app/newcustomapplication"
     ]
 }
